@@ -2491,9 +2491,9 @@ __[ YAML::XS result ]__
 - - 2
   - €
 - - 0
-  - αβγδωαβγδω
+  - ΑΒΓΔΩαβγδω
 - - 0
-  - абвгдабвгд
+  - АБВГДабвгд
 - - 1
   - ∀∂∈
 - - 0
